# DiskImage

./: .gitignore  .pre-commit-config.yaml  MODERNIZATION_COMPLETE.md  README.md  SETUP.txt  backend.py  diskimage.py  gui.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup_dev.py
.github/workflows/: ci.yml
backend/: __init__.py  admin_utils.py  app.py  app_entry.py  archive.py  archive_manager.py  archive_utils.py  cleanup_utils.py  config_utils.py  constants.py  disk_list_utils.py  disk_ops.py  exceptions.py  imaging.py  imaging_worker.py  logging_utils.py  qemu.py  qemu_manager.py  qemu_utils.py  sevenzip.py  sevenzip_manager.py  sevenzip_ops.py  sevenzip_utils.py  thirdparty_downloader.py  validation.py
cli/: __init__.py  main.py
cpp version/: CMakeLists.txt  README.md
cpp version/.github/: copilot-instructions.md
cpp version/include/: disk_imager.h  disk_imager_backend.h  disk_imager_backend_win.h  disk_imager_gui.h  logger.h  progress_bar.h
cpp version/src/: disk_imager.cpp  disk_imager_backend.cpp  disk_imager_backend_win.cpp  disk_imager_gui.cpp  logger.cpp  main.cpp  main_gui.cpp  progress_bar.cpp
docs/: archive_extraction.md
gui/: __init__.py  app.py  gui.py  pyqt_app.py  pyqt_app_new.py
tests/: __init__.py  test_backend.py  test_cli.py  test_gui.py
tools/: README.txt
